--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/bootstrap-social.css" />
+    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
